# video-generator

./: .env.example  .gitignore  CONTEXT.md  README.md  brief.example.toml  config.example.toml  local-llm.eurollm.example.toml  local-llm.example.toml  pyproject.toml
docs/: architecture.md  benchmark-2026-07-11.md  contracts.md  implementation-plan.md  model-matrix.md  prompt-system.md
docs/adr/: 0001-scene-is-the-primary-production-unit.md  0002-workflow-tasks-select-backends-independently.md  0003-compile-visual-briefs-into-image-prompts.md  0004-runs-are-durable-and-non-interactive.md  0005-track-usage-purpose-and-voice-authorization.md  0006-isolate-local-backends-behind-runners.md  0007-orchestrate-bounded-workflow-tasks.md  0008-one-caption-track-drives-all-delivery-formats.md  0009-narration-timeline-is-the-master-clock.md  0010-resume-does-not-silently-rerun-invalidated-work.md  0011-windows-first-ephemeral-model-servers.md  0012-separate-editorial-scenes-from-visual-shots.md  0013-add-fixed-template-remotion-renderer.md
docs/ideas/: fireship.md  higgs-tts-v3.md  models.md
media-library/: README.md
remotion/: package-lock.json  package.json  tsconfig.json
remotion/scripts/: browser-capture.mjs  browser-capture.test.mjs  bundle-cache.mjs  bundle-cache.test.mjs  ensure-browser.mjs  network-policy.mjs  render.mjs  schema.mjs  screenshot.mjs
remotion/src/: index.tsx  root.tsx  types.ts  video.tsx
src/video_generator/: __init__.py  cli.py  config.py  contracts.py  costs.py  errors.py  executor.py  local_llm.py  media.py  net.py  preflight.py  profiles.py  prompting.py  provenance.py  registry.py  remotion_assets.py  remotion_planning.py  remotion_renderer.py  run_store.py  runners.py  schema.py  setup.py  task_models.py  util.py  workflow.py
src/video_generator/assets/runners/: flux.in  higgs-docker.in  llama-server.in  moss-tts.in  omnivoice.in  parakeet.in  qwen-image.in  voxcpm.in  xvoice.in
src/video_generator/backends/: __init__.py  base.py  brave.py  ddgs.py  deterministic.py  elevenlabs.py  gemini.py  local.py  openai.py
src/video_generator/dashboard/: __init__.py  app.py  jobs.py  views.py
src/video_generator/dashboard/static/: app.js  index.html  styles.css
src/video_generator/workers/: __init__.py  higgs_docker.py  llama_server.py  main.py  prepare.py
tests/: conftest.py  test_captions.py  test_cli.py  test_cloud_backends.py  test_config_and_preflight.py  test_contracts.py  test_costs.py  test_dashboard.py  test_ddgs_backend.py  test_duration_repair.py  test_elevenlabs_backend.py  test_executor.py  test_factual_repair.py  test_faster_whisper_worker.py  test_higgs_docker.py  test_image_requests.py  test_llama_worker.py  test_local_image_workers.py  test_local_llm.py  test_local_setup.py  test_local_speech_workers.py  test_media_qc.py  test_multi_format.py  test_outline_normalization.py  test_prompting.py  test_remotion.py  test_remotion_planning.py  test_research_integrity.py  test_review_findings.py  test_run_store.py  test_runners.py  test_script_word_plan.py  test_util.py  test_word_reconciliation.py  test_worker_prepare.py  test_workflow_e2e.py  test_workflow_scheduling.py
