[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "video-generator"
version = "0.1.0"
description = "Local-first, AI-directed narrated video generation with still-image and Remotion renderers"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Juha" }]
dependencies = [
  "ddgs==9.14.4",
  "fastapi>=0.135,<0.136",
  "langdetect==1.0.9",
  "pydantic>=2.11,<3",
  "uvicorn>=0.41,<0.42",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
]

[project.scripts]
video-generator = "video_generator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_generator"]

[tool.hatch.build.targets.wheel.force-include]
"remotion/package.json" = "video_generator/remotion/package.json"
"remotion/package-lock.json" = "video_generator/remotion/package-lock.json"
"remotion/tsconfig.json" = "video_generator/remotion/tsconfig.json"
"remotion/src" = "video_generator/remotion/src"
"remotion/scripts" = "video_generator/remotion/scripts"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/remotion",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/config.example.toml",
  "/local-llm.example.toml",
  "/local-llm.eurollm.example.toml",
  "/brief.example.toml",
  "/.env.example",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
